	* Added OpenGL Pixel Buffer Object (PBO) for future usage
	* Fixed compiling
	* Changed default settings for the renderer
	* Reverted to the old variant of the sound system
	* Added OpenAL, OGG and Vorbis libraries
	* Fixed vid_restart bug
	* Fixed big inside userinfo what made map to load start on the load, thanks @kungfooman
	* Updated binaries
	* Misc fixes

2018-09-11 Dusan Jocic <dusanjocic@msn.com>
	* Misc updates and fixes at the renderer 
	* Updated map files with new shaders
	* Updated binaries

2018-09-07 Dusan Jocic <dusanjocic@msn.com>
	* Fixed crash with and if "dedicated 1" is set
	* Fixed compiling dedicated server
	* Fully functional sv_pure and dedicated server
	* Changed copyright header
	* Updated cMake system
	* Fixed compiling with BZ2 compression

2018-09-06 Dusan Jocic <dusanjocic@msn.com>
	* Fixed sv_pure 1

2018-09-05 Dusan Jocic <dusanjocic@msn.com>
	* Changed "r_bloomDarkenPower" to "0.6"

2018-09-04 Dusan Jocic <dusanjocic@msn.com>
	* Initialize GL_ARB_vertex_buffer_object
	* Added initialization of more OpenGL extensions
	* Removed r_extensions.cpp file
	* Initialize proper GL_ARB_occlusion_query functions
	* More work on the initialization of the OpenGL extensions
	* Use GLSL 1.50 shaders
	* Misc fixes
	* More work on the renderer

2018-09-03 Dusan Jocic <dusanjocic@msn.com>
	* Removed r_hdr console variable from the engine
	* Readded OWBspc, OWMaster and OWRadiant
	* Added library files for the OWRadiant
	
2018-09-02 Dusan Jocic <dusanjocic@msn.com>
	* Updated renderer
	* Various fixes and improvements
	* Fixed color of the text in the console
	* Misc updates
	* Nobody read this

2018-08-30 Dusan Jocic <dusanjocic@msn.com>
	* Added missing library files for the Windows platform
	* More work on the renderer
	
2018-07-08 Dusan Jocic <dusanjocic@msn.com>
	* Fixed some problems with starting the game with the nVidia hardware

2018-07-07 Dusan Jocic <dusanjocic@msn.com>
	* More work on the Linux build
