@@ -1,0 +1,32 @@
+seta r_ext_compressed_textures 0
+seta r_ext_compiled_vertex_array 0
+seta r_ext_texture_env_add 0
+seta r_ext_framebuffer_object 0
+seta r_ext_framebuffer_blit 0
+seta r_ext_texture_float 0
+seta r_arb_seamless_cube_map 0
+seta r_ext_direct_state_access 0
+seta r_ext_max_anisotropy 0
+seta r_postprocess 0
+seta r_normalMapping 0
+seta r_specularMapping 0
+seta r_deluxeMapping 0
+seta r_parallaxMapping 0
+seta r_cubemapping 0
+seta r_pbr 0
+seta r_sunlightMode 0
+seta cg_shadows 0
+seta r_drawSunRays 0
+seta r_genNormalMaps 0
+seta r_mergeLightmaps 0
+seta r_dlightMode 0
+seta r_glossType 0
+seta r_depthPrepass 0
+seta r_floatLightmap 0
+seta r_colorMipLevels 0
+seta r_detailtextures 0 
+seta r_texturebits 0
+seta r_colorbits 0
+seta r_stencilbits 0
+seta r_subdivisions 0
+vid_restart
