@@ -1,0 +1,32 @@
+seta r_ext_compressed_textures 1
+seta r_ext_compiled_vertex_array 1
+seta r_ext_texture_env_add 1
+seta r_ext_framebuffer_object 1
+seta r_ext_framebuffer_blit 1
+seta r_ext_texture_float 1
+seta r_arb_seamless_cube_map 1
+seta r_ext_direct_state_access 1
+seta r_ext_max_anisotropy 2
+seta r_postprocess 1
+seta r_normalMapping 1
+seta r_specularMapping 1
+seta r_deluxeMapping 1
+seta r_parallaxMapping 1
+seta r_cubemapping 1
+seta r_pbr 1
+seta r_sunlightMode 2
+seta cg_shadows 4
+seta r_drawSunRays 1
+seta r_genNormalMaps 1
+seta r_mergeLightmaps 1
+seta r_dlightMode 2
+seta r_glossType 1
+seta r_depthPrepass 1
+seta r_floatLightmap 1
+seta r_colorMipLevels 1
+seta r_detailtextures 1
+seta r_texturebits 32
+seta r_colorbits 32
+seta r_stencilbits 16
+seta r_subdivisions 20
+vid_restart
